{
    "name": "Controller",
    "maps": [
        {
            "name": "PlayerControllerInput",
            "id": "6bbc62ad-7ed4-414c-8df9-e3259e048908",
            "actions": [
                {
                    "name": "Player1Moving",
                    "type": "PassThrough",
                    "id": "03d6469c-8d23-4be1-95dd-16090a99a525",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Player2Moving",
                    "type": "PassThrough",
                    "id": "fff7f6bf-970a-41c0-8e4b-92bd93e28e4b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "aButton",
                    "type": "Button",
                    "id": "e13fb491-5c1a-40cf-9548-0804ee9d4e00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "bButton",
                    "type": "Button",
                    "id": "f3ae5531-18be-4988-9f1d-84e62830161e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "xButton",
                    "type": "Button",
                    "id": "a73f747c-4860-4f78-9f31-5f4fa99793ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "yButton",
                    "type": "Button",
                    "id": "d4594b98-0e79-40f4-a67b-546d69b8b8e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "leftBumper",
                    "type": "Button",
                    "id": "b4ad89df-23d3-4393-b124-9afa0c069255",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "rightBumper",
                    "type": "Button",
                    "id": "4a852bc1-df5a-42ad-b7cd-3f4d3a820425",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "leftTrigger",
                    "type": "Button",
                    "id": "1f35b95a-65be-497c-93ab-aa54368ec3af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "rightTrigger",
                    "type": "Button",
                    "id": "a8cb0bd8-4c36-4d1d-a971-30bd84b309ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "leftStickClick",
                    "type": "Button",
                    "id": "121b0f96-9f04-4cef-a2c2-a665d7449192",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "rightStickClick",
                    "type": "Button",
                    "id": "84066d23-a519-4c09-ade8-45f35be53718",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cdea4a68-8418-49d9-8c8d-d50ab558e5ca",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac21ecd8-dcfd-417d-977f-1a7ff6c793fc",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fe1c3e4-9609-48c4-9c37-aab7850af0b0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "aButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b05f5a3-4cca-43f5-8443-c8aec71b7e09",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "bButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e648b6d1-c11a-4e3b-abce-2f326fc6f788",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "xButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ea99252-e42c-4e55-83bc-1349c5b57c3b",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "yButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e1262a9-032c-46a2-b364-dfe07938afc3",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "leftBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d351506f-7a4f-4983-b2c4-0dc672f2cedc",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rightBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2622f5be-9500-4442-a50f-f3278f661863",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "leftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3460d411-a2c0-424f-8ef8-93e2396a209e",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c774f673-e627-4a22-9890-9d3d4b9b3cbe",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "leftStickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20301890-8228-437f-bcd4-054c043aa6c6",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rightStickClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}